# angular-bazel-hello-world

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-out
patches/: com_github_bazelbuild_bazel_toolchains.diff
src/: BUILD.bazel
tools/: BUILD.bazel
